objects/Event__c.object
<CustomObject>
    <fields>
        <fullName>Maximum_Guests__c</fullName>
        <inlineHelpText>Maximum number of guests from all hosts guest allocations</inlineHelpText>
        <label>Maximum Guests</label>
        <summarizedField>Event_Team_Member__c.Maximum_Number_of_Actual_Invitees__c</summarizedField>
        <summaryForeignKey>Event_Team_Member__c.Event__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Maximum_Invitees__c</fullName>
        <inlineHelpText>Maximum number of invitees based on all the hosts maximum number of invitees.</inlineHelpText>
        <label>Maximum Invitees</label>
        <summarizedField>Event_Team_Member__c.Maximum_Number_of_Proposed_Invitees__c</summarizedField>
        <summaryForeignKey>Event_Team_Member__c.Event__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Maximum_Number_Of_Partners_Per_Delegate__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>The maximum amount of partners a delegate can have. This is used to create the place holder partner delegates when a contact/primary delegate record is added to an event.</inlineHelpText>
        <label>Maximum Number Of Partners Per Delegate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Merchandise__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Set to true if this event has merchandise purchasable by delegates/ticket holders.</inlineHelpText>
        <label>Merchandise?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_Attended__c</fullName>
        <inlineHelpText>The total number of delegates that attended part or all of the event including walk ins.</inlineHelpText>
        <label>Number Attended</label>
        <summaryFilterItems>
            <field>Delegate__c.Status__c</field>
            <operation>equals</operation>
            <value>Attended Partially, Attended</value>
        </summaryFilterItems>
        <summaryForeignKey>Delegate__c.Event__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_Registered__c</fullName>
        <inlineHelpText>The total number of delegates that are registered for the event including accepted invitations and open registrations.</inlineHelpText>
        <label>Number Registered</label>
        <summaryFilterItems>
            <field>Delegate__c.Registration_Status__c</field>
            <operation>equals</operation>
            <value>Accepted, Registered, Confirmed</value>
        </summaryFilterItems>
        <summaryForeignKey>Delegate__c.Event__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Breakaway_Venues_Required__c</fullName>
        <label>Number of Breakaway Venues Required</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Delegates__c</fullName>
        <description>17-08-08 DH No longer sum delegate number - just count of all records
05-23 LImited the rollup to delegates STATUS &lt;&gt; Canceled, No Show, Postponed, Rescheduled</description>
        <inlineHelpText>Total number of Delegates linked to this Event regardless of status</inlineHelpText>
        <label>Number of Delegates</label>
        <summaryForeignKey>Delegate__c.Event__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_cost_per_head__c</fullName>
        <label>Number of cost per head</label>
        <summaryFilterItems>
            <field>Event_Costs__c.Type__c</field>
            <operation>equals</operation>
            <value>Cost per head</value>
        </summaryFilterItems>
        <summaryForeignKey>Event_Costs__c.Event_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Online_Payment_Handler__c</fullName>
        <label>Online Payment Handler</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Paygate</fullName>
                    <default>true</default>
                    <label>Paygate</label>
                </value>
                <value>
                    <fullName>Iveri</fullName>
                </value>
                <value>
                    <fullName>Payfast</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Online_Processing__c</fullName>
        <label>Online Processing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Create Opportunity; Optional Payment</fullName>
                </value>
                <value>
                    <fullName>Create Opportunity; Mandatory Payment</fullName>
                </value>
                <value>
                    <fullName>Do Not Create an Opportunity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_costs__c</fullName>
        <label>Other costs</label>
        <summarizedField>Event_Costs__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Event_Costs__c.Type__c</field>
            <operation>equals</operation>
            <value>Other costs</value>
        </summaryFilterItems>
        <summaryForeignKey>Event_Costs__c.Event_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Outside_Trainer__c</fullName>
        <label>Outside Trainer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PEP_List_Checked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PEP List Checked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Predicated_Number_Of_Guests__c</fullName>
        <formula>if 
  ( 
    Estimate_Number_Of_Partners_Per_Delegate__c &gt; 0, 
    if 
      ( 
        Estimate_Number_Of_Partners_Per_Delegate__c = 1, 
        Number_of_Delegates__c * 2, 
        Number_of_Delegates__c + Number_of_Delegates__c * Estimate_Number_Of_Partners_Per_Delegate__c 
      ), 
    Number_of_Delegates__c 
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Predicated Number Of Guests</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Preferred_Venues__c</fullName>
        <inlineHelpText>Nominate up to 3 Preferred Venues</inlineHelpText>
        <label>Preferred Venue(s)</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Price_Book_Entry_Id__c</fullName>
        <label>Price Book Entry Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <inlineHelpText>This is the standard price for events without multiple ticket types</inlineHelpText>
        <label>Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Private_Delegate_Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Private Delegate Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Process_Walk_ins_at_Registration__c</fullName>
        <label>Process Walk-ins at Registration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Administrator Only</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RSVPInformation__c</fullName>
        <label>RSVP Information</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>RSVP_Date__c</fullName>
        <description>Date Invitees are to RSVP by</description>
        <inlineHelpText>Date Invitees are to RSVP by</inlineHelpText>
        <label>RSVP Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <formula>IF(Number_of_Delegates__c &lt; 80, IMAGE(&quot;/servlet/servlet.FileDownload?file=01524000000Tetx&quot;,&quot;Space&quot;,60,100), IMAGE(&quot;/servlet/servlet.FileDownload?file=01524000000Tetx&quot;,&quot;Property&quot;,60,100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Read_only_fields_on_Checkin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Read only fields on Checkin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Registration_Process__c</fullName>
        <label>Registration Process</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Complex</fullName>
                    <label>Complex (Groups)</label>
                </value>
                <value>
                    <fullName>Simple</fullName>
                    <default>true</default>
                    <label>Simple (Individual)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registration_Type__c</fullName>
        <inlineHelpText>Governs how delegates can be added to events.</inlineHelpText>
        <label>Registration Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Personal Invitation Only</fullName>
                </value>
                <value>
                    <fullName>Invitation Only</fullName>
                </value>
                <value>
                    <fullName>Open Registration</fullName>
                </value>
                <value>
                    <fullName>Open Attendance</fullName>
                </value>
                <value>
                    <fullName>Public</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Delegates_Dietary_Requirements__c</fullName>
        <label>Request Delegate&apos;s Dietary Requirements</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requestor_Business_Area__c</fullName>
        <label>Requestor Business Area</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Requestor_Cell__c</fullName>
        <formula>$User.MobilePhone</formula>
        <label>Requestor Cell</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor_Country__c</fullName>
        <formula>$User.Country</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requestor Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor_Email_Address__c</fullName>
        <formula>$User.Email</formula>
        <label>Requestor Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor_Phone__c</fullName>
        <formula>$User.Phone</formula>
        <label>Requestor Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Events_Functions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Research_Analyst_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Research Analyst Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Time_Text__c</fullName>
        <formula>TEXT(HOUR(EventStartTime__c)) &amp; &quot;:&quot; &amp; IF(MINUTE(EventStartTime__c) &lt; 10, TEXT(MINUTE(EventStartTime__c)) &amp; &quot;0&quot;, TEXT(MINUTE(EventStartTime__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Time (Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Time_c__c</fullName>
        <label>Start Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00:00</fullName>
                </value>
                <value>
                    <fullName>00:30</fullName>
                </value>
                <value>
                    <fullName>01:00</fullName>
                </value>
                <value>
                    <fullName>01:30</fullName>
                </value>
                <value>
                    <fullName>02:00</fullName>
                </value>
                <value>
                    <fullName>02:30</fullName>
                </value>
                <value>
                    <fullName>03:00</fullName>
                </value>
                <value>
                    <fullName>03:30</fullName>
                </value>
                <value>
                    <fullName>04:00</fullName>
                </value>
                <value>
                    <fullName>04:30</fullName>
                </value>
                <value>
                    <fullName>05:00</fullName>
                </value>
                <value>
                    <fullName>05:30</fullName>
                </value>
                <value>
                    <fullName>06:00</fullName>
                </value>
                <value>
                    <fullName>06:30</fullName>
                </value>
                <value>
                    <fullName>07:00</fullName>
                </value>
                <value>
                    <fullName>07:30</fullName>
                </value>
                <value>
                    <fullName>08:00</fullName>
                </value>
                <value>
                    <fullName>08:30</fullName>
                </value>
                <value>
                    <fullName>09:00</fullName>
                </value>
                <value>
                    <fullName>09:30</fullName>
                </value>
                <value>
                    <fullName>10:00</fullName>
                </value>
                <value>
                    <fullName>10:30</fullName>
                </value>
                <value>
                    <fullName>11:00</fullName>
                </value>
                <value>
                    <fullName>11:30</fullName>
                </value>
                <value>
                    <fullName>12:00</fullName>
                </value>
                <value>
                    <fullName>12:30</fullName>
                </value>
                <value>
                    <fullName>13:00</fullName>
                </value>
                <value>
                    <fullName>13:30</fullName>
                </value>
                <value>
                    <fullName>14:00</fullName>
                </value>
                <value>
                    <fullName>14:30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Style_Sheet__c</fullName>
        <description>Name of static resource style sheet to be used for the event.</description>
        <inlineHelpText>Name of static resource style sheet to be used for the event.</inlineHelpText>
        <label>Style Sheet</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupportEmailAddress__c</fullName>
        <label>Support Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Supported_Client_Discount__c</fullName>
        <inlineHelpText>Discount for Existing CQS Clients</inlineHelpText>
        <label>Supported Client Discount</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Target_Invitees__c</fullName>
        <description>Target Invitees for the Event</description>
        <inlineHelpText>To select more than one Target invitee for the event hold down the CTRL Key and select the Target invitee values provided in the Picklist</inlineHelpText>
        <label>Target Invitees</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Target_Invitees</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technical_Requirements__c</fullName>
        <label>Technical Requirements</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Microphones</fullName>
                </value>
                <value>
                    <fullName>PA Sound</fullName>
                </value>
                <value>
                    <fullName>Podium</fullName>
                </value>
                <value>
                    <fullName>Projector</fullName>
                </value>
                <value>
                    <fullName>Screen</fullName>
                </value>
                <value>
                    <fullName>Stage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Terms_and_Conditions_Document_URL__c</fullName>
        <inlineHelpText>Link to the event&apos;s terms and conditions document.</inlineHelpText>
        <label>Terms and Conditions Document URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Terms_and_Conditions__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Terms and Conditions</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Event_Configuration__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Event Disclaimer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Event_Configuration__c</referenceTo>
        <relationshipName>Terms_and_Conditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Theme__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Theme</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select a valid Theme</errorMessage>
            <filterItems>
                <field>Event_Configuration__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Event Themes</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Event_Configuration__c</referenceTo>
        <relationshipName>Events_Using_This</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Delegate_Cost1__c</fullName>
        <formula>Number_of_Delegates__c  *  Cost_per_head__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Delegate Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trainer__c</fullName>
        <formula>Outside_Trainer__c  &amp;   (Internal_Trainer__r.FirstName &amp; &quot; &quot; &amp; Internal_Trainer__r.LastName )</formula>
        <label>Trainer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transfers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transfers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transport_Information__c</fullName>
        <label>Transport Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Travel_costs__c</fullName>
        <label>Travel costs</label>
        <summarizedField>Event_Costs__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Event_Costs__c.Type__c</field>
            <operation>equals</operation>
            <value>Travel costs</value>
        </summaryFilterItems>
        <summaryForeignKey>Event_Costs__c.Event_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>User Group</fullName>
                </value>
                <value>
                    <fullName>Breakfast</fullName>
                </value>
                <value>
                    <fullName>Lunch</fullName>
                </value>
                <value>
                    <fullName>Dinner</fullName>
                </value>
                <value>
                    <fullName>Cocktail Party</fullName>
                </value>
                <value>
                    <fullName>Analyst Marketing: Roadshow</fullName>
                </value>
                <value>
                    <fullName>Company Marketing: Roadshow</fullName>
                </value>
                <value>
                    <fullName>Client Conference Calls</fullName>
                </value>
                <value>
                    <fullName>Bespoke Client Meetings</fullName>
                </value>
                <value>
                    <fullName>Company/Site Visits</fullName>
                </value>
                <value>
                    <fullName>Conference</fullName>
                </value>
                <value>
                    <fullName>Industry Expert Event</fullName>
                </value>
                <value>
                    <fullName>Investor/Sector Field Trip</fullName>
                </value>
                <value>
                    <fullName>Management Meeting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>URL_For_Booking_Page__c</fullName>
        <formula>Event_Configuration__r.Booking_Page_URL__c + &quot;?id=&quot; + Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URL For Booking Page</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL_For_RSVP_Page__c</fullName>
        <formula>Event_Configuration__r.RSVP_Page_URL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URL For RSVP Page</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_Default_Delegate_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked all delegates will be given the default delegate type on creation.</inlineHelpText>
        <label>Use Default Delegate Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Default_Ticket_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Default Ticket Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Ticket_Types_Batches__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Ticket Types/Batches</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_additional_options_1__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Set to true if there are additional options.</inlineHelpText>
        <label>Use additional options 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_additional_options_2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to true if there are additional options 2.</description>
        <label>Use additional options 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Venue_Map__c</fullName>
        <formula>Venue__r.Map__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Venue Map</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Venue</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.City__c</field>
                <operation>equals</operation>
                <valueField>Venue__c.City__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.Country__c</field>
                <operation>equals</operation>
                <valueField>Venue__c.Country__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Venue__c</referenceTo>
        <relationshipLabel>Events/Functions</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Visit_Reason_Options__c</fullName>
        <inlineHelpText>Semi-colon separated list of visit reason options for the delegate to select.</inlineHelpText>
        <label>Visit Reason Options</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Web_Page_Footer_URL__c</fullName>
        <label>Web Pages Footer URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Web_Pages_Banner_URL__c</fullName>
        <label>Web Pages Banner URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Pages_Banner__c</fullName>
        <formula>IMAGE( Web_Pages_Banner_URL__c , &apos;No Custom Banner&apos;)</formula>
        <label>Web Pages Banner</label>
        <type>Text</type>
    </fields>
    <label>Event/Function</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Event_Host__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Events/Functions</pluralLabel>
    <recordTypes>
        <fullName>Archived</fullName>
        <active>true</active>
        <label>Archived</label>
    </recordTypes>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>Event_Request</fullName>
        <active>true</active>
        <description>Request to Host an Event</description>
        <label>Event Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Function</fullName>
        <active>true</active>
        <description>Social Engagement with Clients including Dinners/Breakfasts/Hospitality</description>
        <label>Function</label>
    </recordTypes>
    <recordTypes>
        <fullName>Market_Research</fullName>
        <active>true</active>
        <description>Analyst Marketing and Company Marketing Roadshows, Bespoke Client Meetings, Company/Site Visits, Conferences, Industry Expert Events, Investor/Sector Field Trips, Management Meetings</description>
        <label>Market Research</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Conference_call_validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Conference_link__c )  &amp;&amp;  Active__c  = True  &amp;&amp;    ISPICKVAL(Type__c, &quot;Client Conference Calls&quot;) &amp;&amp;  RecordType.DeveloperName = &apos;Market_Research&apos;</errorConditionFormula>
        <errorDisplayField>Conference_link__c</errorDisplayField>
        <errorMessage>Add a conference link</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Event_Date_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>Start_Date__c  &gt;  End_Date__c</errorConditionFormula>
        <errorMessage>You can not add an event start date that is greater than the end date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Number_of_cost_per_head</fullName>
        <active>true</active>
        <description>To prevent users from creating more than one event cost record with the type &quot;cost per head&quot;</description>
        <errorConditionFormula>Number_of_cost_per_head__c   &gt;  1</errorConditionFormula>
        <errorMessage>Users are not allowed to create more than one event record with type costs per head</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_time</fullName>
        <active>true</active>
        <errorConditionFormula>EventStartTime__c &gt;= EventEndTime__c  &amp;&amp;  Start_Date__c = End_Date__c</errorConditionFormula>
        <errorMessage>The event start time can not be greater than the event end time</errorMessage>
    </validationRules>
</CustomObject>